# autodev-agents

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
docs/: req0.md  如何实现全自动.md
examples/: simple_todo_app.py
src/: main.py
src/agents/: architect_agent.py  coder_agent.py  pm_agent.py
src/autodev/: __init__.py  main.py
src/autodev/agents/: architect_agent.py  base.py  coder_agent.py  pm_agent.py  prd_reviewer_agents.py
src/autodev/config/: prompts.py  settings.py
src/autodev/core/: checkpoint_manager.py  graph.py  state.py
src/autodev/tools/: claude_cli.py  file_ops.py  validation.py
src/autodev/utils/: helpers.py  logger.py
src/config/: prompts.py  settings.py
src/core/: checkpoint_manager.py  graph.py  state.py
src/tools/: claude_cli.py  file_ops.py  validation.py
tests/: __init__.py  conftest.py  test_integration.py
tests/test_agents/: __init__.py  test_architect_agent.py  test_pm_agent.py
tests/test_tools/: test_file_ops.py  test_helpers.py  test_validation.py
